Fix watchstar alignment in stable
It got a little bit too close to the search bar after one of recent
commits whoch made the chrome look asymmetrical.

--- a/less/modules/mf-watchstar.less
+++ b/less/modules/mf-watchstar.less
@@ -17,7 +17,7 @@ a.watch-this-article {
 }
 
 li a.watch-this-article {
-	right: 12px;
+	right: 8px;
 	top: 0;
 	bottom: 0;
 	height: 100%;
